rota get menuItems nao pede autenticação
